--- a/templates/deployment.yml
+++ b/templates/deployment.yml
@@ -20,17 +20,17 @@ spec:
           imagePullPolicy: {{ .Values.deployment.image.pullPolicy | quote }}
           command:
             - kube-oidc-proxy
-            - --oidc-issuer-url={{ .Values.oidc.issuer }}
-            - --oidc-client-id={{ .Values.oidc.clientID }}
+            - --oidc-issuer-url="{{ .Values.oidc.issuer }}"
+            - --oidc-client-id="{{ .Values.oidc.clientID }}"
             {{- if .Values.oidc.clientSecret }}
-            - --oidc-client-secret={{.Values.oidc.clientSecret }}
+            - --oidc-client-secret="{{.Values.oidc.clientSecret }}"
             {{- end }}
-            - --oidc-username-claim={{ .Values.oidc.usernameClaim }}
-            - --oidc-username-prefix={{ .Values.oidc.usernamePrefix }}
-            - --oidc-groups-claim={{ .Values.oidc.groupsClaim }}
-            - --oidc-groups-prefix={{ .Values.oidc.groupsPrefix }}
+            - --oidc-username-claim="{{ .Values.oidc.usernameClaim }}"
+            - --oidc-username-prefix="{{ .Values.oidc.usernamePrefix }}"
+            - --oidc-groups-claim="{{ .Values.oidc.groupsClaim }}"
+            - --oidc-groups-prefix="{{ .Values.oidc.groupsPrefix }}"
             {{- range .Values.oidc.requiredClaims }}
-            - --oidc-required-claim={{ . }}
+            - --oidc-required-claim="{{ . }}"
             {{- end }}
           resources: {{ toYaml .Values.deployment.resources | nindent 12 }}
           ports:
