--- a/templates/deployment.yml
+++ b/templates/deployment.yml
@@ -33,6 +33,9 @@ spec:
             {{- range .Values.oidc.requiredClaims }}
             - "--oidc-required-claim={{ . }}"
             {{- end }}
+            {{- if .Values.verbosity }}
+            - "--v={{ .Values.verbosity }}"
+            {{- end }}
           resources: {{ toYaml .Values.deployment.resources | nindent 12 }}
           ports:
             - name: metrics
