--- a/templates/ingress.yml
+++ b/templates/ingress.yml
@@ -9,6 +9,9 @@ metadata:
   annotations: {{ toYaml .Values.ingress.annotations | nindent 4 }}
   {{- end }}
 spec:
+  {{- if .Values.ingress.ingressClassName }}
+  ingressClassName: {{ .Values.ingress.ingressClassName | quote }}
+  {{- end }}
   rules:
     {{- range .Values.ingress.hosts }}
     - host: {{ . | quote }}
