Add pdb and support impersonation
Add pdb (disabled by default)
Add impersonation support to the clusterrole so that `kubectl auth
--as...` works

Signed-off-by: Aidan Jensen <aidan@artificial.com>

--- a/templates/clusterrole.yml
+++ b/templates/clusterrole.yml
@@ -23,3 +23,9 @@ rules:
   verbs:
   - "create"
   - "impersonate"
+- apiGroups:
+    - "authorization.k8s.io"
+  resources:
+    - "subjectaccessreviews"
+  verbs:
+    - "create"
